# aoc2022

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.py  day8.cpp  day8.py  day9.cpp
