project("aoc2022")

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable("out/day1" "day1.cpp")
add_executable("out/day2" "day2.cpp")
add_executable("out/day3" "day3.cpp")
add_executable("out/day4" "day4.cpp")
add_executable("out/day5" "day5.cpp")
add_executable("out/day6" "day6.cpp")

add_executable("out/day8" "day8.cpp")
